--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 310px;
+    margin-top: 50%;
     font-size: 30px;
 }
 .header-text h1{
